Update CSS colors and add BackgroundThings component

--- a/rydde-app-react/src/App.css
+++ b/rydde-app-react/src/App.css
@@ -11,9 +11,13 @@
   --davs-gray: #4D5359;
   --myrtle-green: #508484;
   --mint: #79C99E;
+  --beigh: #DAD9D2;
+  --green: #171D03;
+  --light-green: #242d06;
+  --brown: #56504E;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6, label {
   color: var(--white);
 }
 
@@ -49,14 +53,4 @@ body {
     background-color: var(--mint);
   }
 
-}
-
-.user {
-  margin: 2%;
-  p {
-    color: var(--mint);
-  }
-}
-label {
-  color: var(--mint);
 }
