--- a/rydde-app-react/src/components/FamilySignUpForm/FamilySignUpForn.css
+++ b/rydde-app-react/src/components/FamilySignUpForm/FamilySignUpForn.css
@@ -16,22 +16,28 @@
         width: 100%;
 
         .form-title {
-            margin: 1% 0%;
-            font-size: 3vw;
+            margin: 0.5% 0%;
+            font-size: 5vw;
             text-align: center;
 
         }
         form {
-            height: 60%;
+            height: 52%;
             width: 100%;
 
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
             label {
-               font-size: 1.25vw;
+               font-size: 1.5vw;
                line-height: 120%;
+               width: 55%;
             }
             input {
                 width: 100%;
-                font-size: 1.5vw;
+                font-size: 1.75vw;
             }
             .submit-btn {
                 position: absolute;
@@ -62,15 +68,6 @@
                 transform: scale(1.07);
                 background-color: var(--light-green);
             }
-        }
-    }
-
-    .signup-div {
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-around;
         }
     }
 }
