--- a/rydde-app-react/src/components/FamilySignUpForm/FamilySignUpForn.css
+++ b/rydde-app-react/src/components/FamilySignUpForm/FamilySignUpForn.css
@@ -45,7 +45,7 @@
                 right: 0;
 
                 padding: 2% 5%;
-                margin: 5.3% 6%;
+                margin: 5.5% 6%;
                 width: auto;
 
                 font-size: 1.25vw;
@@ -54,12 +54,15 @@
             }
         }
         .to-btn {
+            position: absolute;
+            bottom: 0;
+            left: 0;
             font-size: 1.25vw;
             color: var(--white);
         
             background-color: var(--green);
             padding: 2% 5%;
-            margin: 3% 4%;
+            margin: 5.3% 6%;
 
             border-radius: 2vmax;
             border: none;
