--- a/rydde-app-react/src/components/FamilySignUpForm/Family.css
+++ b/rydde-app-react/src/components/FamilySignUpForm/Family.css
@@ -4,8 +4,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    height: 55%;
-    width: 55%;
+    height: 60%;
+    width: 65%;
     border-radius: 3vmax;
     overflow: hidden;
     background-color: #d9d9d96c;
@@ -16,8 +16,10 @@
         width: 100%;
 
         .form-title {
-            margin: 0.5% 0%;
+            margin: 2% 0% 1%;
+            letter-spacing: 10px;
             font-size: 5vw;
+            font-weight: 900;
             text-align: center;
 
         }
