--- a/rydde-app-react/src/components/Navigation/Navigation.css
+++ b/rydde-app-react/src/components/Navigation/Navigation.css
@@ -22,6 +22,7 @@ nav {
         justify-content: space-around;
 
         .nav-link {
+            cursor: pointer;
             font-size: 1vw;
             text-align: center;
             z-index: 2;
@@ -31,6 +32,7 @@ nav {
             color: var(--white);
         }
         .fansy-shit {
+            transition: all 350ms cubic-bezier(.3,-0.01,.49,1.25);
             position: absolute;
             z-index: 1;
             top: 50%;
