--- a/rydde-app-react/src/components/BackgroundThings/BackgroundThings.css
+++ b/rydde-app-react/src/components/BackgroundThings/BackgroundThings.css
@@ -86,3 +86,58 @@
     }
 
 }
+
+
+@media (max-width: 768px) {
+    .background-things-main {
+        .background-thing {
+            height: 10%;
+
+        }
+
+        .background-thing:nth-child(1) {
+            height: 55%;
+            top: -15%;
+            left: -35%;
+            z-index: 3;
+            background-color: var(--green);
+            animation-delay: 0.2s;
+        }
+        .background-thing:nth-child(2) {
+            height: 35%;
+            bottom: 40%;
+            left: -35%;
+            background-color: var(--davs-gray);
+            animation-delay: 0.6s;
+        }
+        .background-thing:nth-child(3) {
+            height: 50%;
+            top: -15%;
+            left: 0%;
+            background-color: var(--brown);
+            animation-delay: 1s;
+        }
+        .background-thing:nth-child(4) {
+            height: 60%;
+            bottom: -20%;
+            right: -50%;
+            z-index: 3;
+            background-color: var(--green);
+            animation-delay: 1.4s;
+        }
+        .background-thing:nth-child(5) {
+            height: 35%;
+            top: 45%;
+            right: -40%;
+            background-color: var(--davs-gray);
+            animation-delay: 1.8s;
+        }
+        .background-thing:nth-child(6) {
+            height: 50%;
+            bottom: -20%;
+            right: 0%;
+            background-color: var(--brown);
+            animation-delay: 2.2s;
+        }
+    }
+}
