Update CSS styles and add grid layout

--- a/rydde-app-react/src/App.css
+++ b/rydde-app-react/src/App.css
@@ -10,6 +10,7 @@
   --white: #f1f1f1;
   --beigh: #DAD9D2;
   --davs-gray: #4D5359;
+  --grid-color: #DAD9D242;
   
   --myrtle-green: #508484;
   --green: #171D03;
