--- a/rydde-app-react/src/components/Homepage/NewTask/NewTask.css
+++ b/rydde-app-react/src/components/Homepage/NewTask/NewTask.css
@@ -1,10 +1,3 @@
-.btnbtn {
-    position: absolute;
-    right: 10%;
-    bottom: 10%;
-    z-index: 999;
-}
-
 .new-task-container {
     position: absolute;
     top: 50%;
@@ -15,6 +8,15 @@
     height: 100%;
     width: 100%;
     background-color: #2a2c2e;
+    overflow: hidden;
+
+
+    form {
+        height: 100%;
+        width: 25%;
+        border: 2px solid;
+        margin: 0 10%;
+    }
 }
 
 .new-task-container.active {
