Update server.js and NewTask.js

--- a/rydde-app-react/src/components/Homepage/NewTask/NewTask.css
+++ b/rydde-app-react/src/components/Homepage/NewTask/NewTask.css
@@ -92,7 +92,7 @@
                     height: 7%;
 
                     &:hover {
-                        background-color: #f5a89f;
+                        background-color: #de8d85;
                     }
                 }
                 input {
