--- a/rydde-app-react/src/components/Homepage/Homepage.css
+++ b/rydde-app-react/src/components/Homepage/Homepage.css
@@ -35,7 +35,7 @@
         }
 
         .leaderboard-container {
-            padding-top: 20%;
+            padding: 10% 0 5%;
 
             grid-column: 1 / span 9;
             grid-row: 1 / span 10 ;
@@ -43,6 +43,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            align-items: left;
 
             h2 {
                 position: absolute;
@@ -58,8 +59,9 @@
             }
             p {
                 font-weight: 200;
-                margin-left: 7%;
-                font-size: 1.2dvw;
+                margin-left: 20%;
+                font-size: 1.4dvw;
+                letter-spacing: 3cqi;
             }
         }
 
