--- a/rydde-app-react/src/App.css
+++ b/rydde-app-react/src/App.css
@@ -11,6 +11,7 @@
   --beigh: #DAD9D2;
   --davs-gray: #4D5359;
   --grid-color: #DAD9D242;
+  --dark-seethrough: #00000091;
   
   --myrtle-green: #508484;
   --green: #171D03;
