--- a/rydde-app-react/src/components/Homepage/Homepage.css
+++ b/rydde-app-react/src/components/Homepage/Homepage.css
@@ -102,12 +102,12 @@
         margin: 0dvh 0 8dvh 0dvh;
 
         .hompage-h1 {
-            font-size: 9dvw;
+            font-size: 8dvw;
             text-align: center;
             margin: 0;
         }
 
-        .tile-grid-container {
+        .tie-grid-container {
             height: 93%;
         }
     }
